<resources>
    <string name="app_name">Shopping</string>
    <string name="cardHolder">Card Holder</string>
    <string name="cardNumber">Card Number</string>
    <string name="expirationMonth">Expiration Month</string>
    <string name="expirationYear">Expiration Year</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="cryptogram">Cryptogram</string>
    <string name="addressName">Address Name</string>
    <string name="addressStreet">Address Street</string>
    <string name="addressCity">Address City</string>
    <string name="addressCountry">Address Country</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="load">Load</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="deleteConfirm">Do you want to delete the following configuration?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="editAddress">Edit address</string>
    <string name="editBilling">Edit billing</string>
    <string name="shoppingInfoName">Name of the configuration</string>
    <string name="favorite">Favorite?</string>
    <string name="addPreference">Add a new preference</string>
    <string name="addPreferenceName">Enter the name</string>
    <string name="selectVersion">Select Version</string>
    <string name="selectVersionNumber">Select which version you want to load</string>
    <string name="useGeolocation">Use Geolocation</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="geoError">An error occured, make sure geolocation is setted properly</string>
    <string name="loadError">No configuraton found.</string>
</resources>
